# rust-lab-cli

./: Cargo.toml
.github/workflows/: rust-checks.yml
src/: lib.rs
test/: test1.txt
